--- a/src/Gradebook/Gradebook.Web/Components/_Imports.razor
+++ b/src/Gradebook/Gradebook.Web/Components/_Imports.razor
@@ -8,5 +8,7 @@
 @using Microsoft.JSInterop
 @using Gradebook.Web
 @using Gradebook.Web.Components
+@using Gradebook.Web.Components.Abstract;
+@using Gradebook.Web.Components.Pages;
 @using System.Security.Claims
 @using MudBlazor
