--- a/src/Gradebook/Gradebook.Web/Components/_Imports.razor
+++ b/src/Gradebook/Gradebook.Web/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using Gradebook.Web.Components
 @using Gradebook.Web.Components.Abstract;
 @using Gradebook.Web.Components.Pages;
+@using Gradebook.Web.Components.Layout
 @using System.Security.Claims
 @using MudBlazor
