--- a/src/Gradebook/Gradebook.Web/wwwroot/app.css
+++ b/src/Gradebook/Gradebook.Web/wwwroot/app.css
@@ -36,3 +36,85 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.anon-layout {
+    min-height: 100vh;
+    display: flex;
+}
+
+.anon-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    justify-content: center;
+    padding: 0 !important;
+}
+
+
+.anon-content .form-surface {
+    width: 85%;
+    max-width: 500px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .8rem;
+    align-items: center;
+}
+
+.anon-form-field {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    gap: .8rem;
+    width: 100%;
+}
+
+.profile-picker {
+    display: flex;
+    flex-direction: column;
+    padding: .8rem;
+    max-height: 300px;
+    overflow-y: scroll;
+    gap: 2rem;
+    scrollbar-width: none;
+    min-height: 11rem;
+}
+
+.profile {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 0 1rem;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    cursor: pointer;
+}
+
+    .profile:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.12), 0px 4px 8px 2px rgb(89 74 226 / 33%);
+    }
+
+.profile-icon {
+    grid-row: span 2;
+    font-size: 3.5rem !important;
+}
+
+.profile-type {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.school-name {
+    color: rgb(86 86 86);
+}
