--- a/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
@@ -5,16 +5,16 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
+@if (UserStateContainer.IsPopulated)
+{
     <MudLayout>
         <MudAppBar Elevation="4">
-        @if (!IsLoginPage) {
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => isDrawerOpen = !isDrawerOpen)" />
             <MudSpacer />
             @* <UserProfile /> *@
             <MudDrawer @bind-Open="isDrawerOpen" ClipMode="DrawerClipMode.Docked" Elevation="8">
                 @* <NavMenu /> *@
             </MudDrawer>
-        }
         </MudAppBar>
         <MudMainContent>
             <MudOverlay Visible="IsLoading" ZIndex="1010" LightBackground Absolute="true">
@@ -23,6 +23,7 @@
             @Body
         </MudMainContent>
     </MudLayout>
+}
 
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
@@ -33,6 +34,9 @@
 @code {
     bool isDrawerOpen = true;
 
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; } = default!;
+
     [Inject] private NavigationManager NavigationManager { get; set; } = default!;
 
     [Inject] public UserStateContainer UserStateContainer { get; set; } = default!;
@@ -41,11 +45,7 @@
 
     public ClaimsPrincipal User { get; set; } = default!;
 
-    public bool IsAuthenticated { get; set; } = false;
-
     private bool IsLoading { get; set; } = false;
-
-    protected bool IsLoginPage => NavigationManager.Uri.Contains("/login");
 
     protected override async Task OnInitializedAsync()
     {
@@ -58,13 +58,74 @@
             });
         });
 
-        // User = (await authenticationStateTask).User;
+        User = (await authenticationStateTask).User;
+
+        if (!(User.Identity?.IsAuthenticated ?? false))
+        {
+            NavigationManager.NavigateTo("/account/login");
+            return;
+        }
 
         CreateUserStateContainer();
     }
 
-    void CreateUserStateContainer()
+    private void CreateUserStateContainer()
     {
-        // TODO
+        if (UserStateContainer.Id == Guid.Empty)
+        {
+            UserStateContainer.Id = new Guid(User.FindFirstValue(Claims.USER_ID)!);
+        }
+
+        if (string.IsNullOrWhiteSpace(UserStateContainer.UserName))
+        {
+            UserStateContainer.UserName = User.FindFirstValue(Claims.USERNAME)!;
+        }
+
+        if (string.IsNullOrWhiteSpace(UserStateContainer.Email))
+        {
+            UserStateContainer.Email = User.FindFirstValue(Claims.EMAIL)!;
+        }
+
+        if (string.IsNullOrWhiteSpace(UserStateContainer.FullName))
+        {
+            UserStateContainer.FullName = User.FindFirstValue(Claims.FULL_NAME)!;
+        }
+
+        if (UserStateContainer.ProfileId == Guid.Empty)
+        {
+            UserStateContainer.ProfileId = new Guid(User.FindFirstValue(Claims.PROFILE_ID)!);
+        }
+
+        if (string.IsNullOrWhiteSpace(UserStateContainer.SchoolName))
+        {
+            UserStateContainer.SchoolName = User.FindFirstValue(Claims.SCHOOL_NAME);
+        }
+
+        if (UserStateContainer.SchoolId is null && UserStateContainer.SchoolId == Guid.Empty)
+        {
+            var schoolIdClaim = User.FindFirstValue(Claims.SCHOOL_ID);
+            UserStateContainer.SchoolId = string.IsNullOrWhiteSpace(schoolIdClaim) ? null : new Guid(schoolIdClaim);
+        }
+
+        if (UserStateContainer.ClassId is null && UserStateContainer.ClassId == Guid.Empty)
+        {
+            var classIdClaim = User.FindFirstValue(Claims.CLASS_ID);
+            UserStateContainer.ClassId = string.IsNullOrWhiteSpace(classIdClaim) ? null : new Guid(classIdClaim);
+        }
+
+        if (UserStateContainer.Role == 0)
+        {
+            var role = User.FindFirstValue(Claims.ROLE)!;
+            if (Enum.TryParse(role, out RoleType userRole))
+            {
+                UserStateContainer.Role = userRole;
+            }
+            else
+            {
+                UserStateContainer.Role = RoleType.Student; // Default role if parsing fails
+            }
+        }
+
+        UserStateContainer.IsPopulated = true;
     }
 }
