--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/CreateSchool.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/CreateSchool.razor
@@ -1,4 +1,4 @@
-﻿@page "/admin/manage-schools/create"
+﻿@page "/manage-schools/create"
 @inherits CreateSchoolBase
 
 <MudPaper Class="pa-4 mx-auto mt-6" Style="max-width:500px">
