--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/EditSchool.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/EditSchool.razor
@@ -1,5 +1,5 @@
-﻿@page "/admin/manage-schools/edit/{Id:guid}"
-@inherits EditSchoolBase
+﻿@page "/manage-schools/edit/{Id:guid}"
+@inherits ExtendedComponentBase
 
 <MudPaper Class="pa-4 mx-auto mt-6" Style="max-width:500px;">
     <MudText Typo="Typo.h5" Class="mb-4">Edit School</MudText>
