Added ApiHeadmaster service & refactored ManageSchools pages with server data

--- a/src/Gradebook/Gradebook.Web/Components/_Imports.razor
+++ b/src/Gradebook/Gradebook.Web/Components/_Imports.razor
@@ -12,5 +12,6 @@
 @using Gradebook.Web.Components.Abstract;
 @using Gradebook.Web.Components.Pages;
 @using Gradebook.Web.Components.Layout
+@using Gradebook.Web.Components.Shared;
 @using System.Security.Claims
 @using MudBlazor
