--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/ManageSchools.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageSchools/ManageSchools.razor
@@ -1,10 +1,12 @@
 ﻿@page "/manage-schools"
 @inherits ExtendedComponentBase
 
-<MudPaper Class="pa-4">
-    <MudText Typo="Typo.h5" Class="mb-4">Manage Schools</MudText>
+<PageTitle>@PageTitle</PageTitle>
 
-    <MudDataGrid T="SchoolViewModel"
+<MudPaper Class="pa-4">
+    <MudText Typo="Typo.h5" Class="mb-4">@PageTitle</MudText>
+
+    <MudDataGrid T="SchoolViewModelche"
                  Items="_schools"
                  @bind-SelectedItem="_selectedSchool"
                  Filterable="true"
@@ -45,7 +47,16 @@
             <PropertyColumn Property="x => x.Name" Title="Name" />
             <PropertyColumn Property="x => x.Address" Title="Address" />
             <PropertyColumn Property="x => x.Website" Title="Website" />
-            <PropertyColumn Property="x => x.Headmasters" Title="Headmasters" />
+            <TemplateColumn Title="Headmasters">
+                <CellTemplate>
+                    <div>
+                        @foreach (var headmaster in context.Item.Headmasters)
+                        {
+                            <HeadmasterChip Headmaster="headmaster" />
+                        }
+                    </div>
+                </CellTemplate>
+            </TemplateColumn>
         </Columns>
 
         <NoRecordsContent>
@@ -53,7 +64,7 @@
         </NoRecordsContent>
 
         <PagerContent>
-            <MudDataGridPager T="SchoolViewModel" />
+            <MudDataGridPager T="SchoolViewModelche" />
         </PagerContent>
 
     </MudDataGrid>
