Navmenu fixed styling based on component count

--- a/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
@@ -23,6 +23,7 @@
                 <span><MudIcon Icon="@Icons.Material.Filled.CheckCircle" /><MudNavLink Href="attendance">Attendance</MudNavLink></span>
                 <span><MudIcon Icon="@Icons.Material.Filled.Message" /><MudNavLink Href="messages">Messages</MudNavLink></span>
                 <span><MudIcon Icon="@Icons.Material.Filled.Settings" /><MudNavLink Href="settings">Settings</MudNavLink></span>
+                <span><MudIcon Icon="@Icons.Material.Filled.AdminPanelSettings" /><MudNavLink Href="settings">Administator</MudNavLink></span>
             </div>
         </MudDrawer>
 
