--- a/src/Gradebook/Gradebook.Web/Components/Pages/Home.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Home.razor
@@ -4,4 +4,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+<ExtendedAuthorizeView Roles="@([RoleType.Admin, RoleType.Headmaster])">
+    Welcome to your new app.
+</ExtendedAuthorizeView>
