--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/EditTeacher.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/EditTeacher.razor
@@ -1,4 +1,5 @@
 ﻿@page "/manage-teachers/edit/{Id:guid}"
+@using Gradebook.Web.Models.ViewModels
 @inherits ExtendedComponentBase
 
 <MudPaper Class="pa-4 mx-auto mt-6" Style="max-width:500px;">
