Added all ViewModels + ManageTeacher & CreateTeacher

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/EditTeacher.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/EditTeacher.razor
@@ -1,4 +1,4 @@
-﻿@page "/manage-teachers/edit/{Id:guid}"
+﻿@* @page "/manage-teachers/edit/{Id:guid}"
 @using Gradebook.Web.Models.ViewModels
 @inherits ExtendedComponentBase
 
@@ -55,3 +55,4 @@
         </EditForm>
     }
 </MudPaper>
+ *@
