Added Profile Icon & Role Icon & Profile Page & Dashboard ( Home Page )

--- a/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Layout/MainLayout.razor
@@ -11,7 +11,8 @@
         <MudAppBar Elevation="4">
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => isDrawerOpen = !isDrawerOpen)" />
             <MudSpacer />
-            @* <UserProfile /> *@
+            <RoleIcon Size="Size.Small" />
+            <UserProfile /> 
             <MudDrawer @bind-Open="isDrawerOpen" ClipMode="DrawerClipMode.Docked" Elevation="8">
                 <NavMenu />
             </MudDrawer>
