Added functionallity where you can make api request for grades by student id

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Dashboard/Dashboard.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Dashboard/Dashboard.razor
@@ -6,8 +6,9 @@
 
 
 
+
+
 <MudLayout>
-    <!-- Greeting Section -->
     <MudPaper Class="pa-6 mb-6 greeting-banner" Elevation="4" Square="false" Style="border-radius: 16px;">
         <MudText Typo="Typo.h4" Class="mb-2" Color="Color.Primary">
             👋 Welcome back, <b>@userStateContainer.FullName</b>! (@userStateContainer.Role)
@@ -16,40 +17,40 @@
             Hope you're ready to learn something great today.
         </MudText>
     </MudPaper>
-    <!-- Main content -->
-    <MudContainer MaxWidth="MaxWidth.False" Class="p-4">
-        <MudGrid GutterSize="4">
-            <MudItem xs="12" sm="6" md="3">
-                <MudPaper Class="pa-4" Elevation="3">
-                    <MudText Typo="Typo.h6">Courses</MudText>
-                    <MudText Typo="Typo.subtitle1">5 Enrolled</MudText>
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" sm="6" md="3">
-                <MudPaper Class="pa-4" Elevation="3">
-                    <MudText Typo="Typo.h6">Assignments</MudText>
-                    <MudText Typo="Typo.subtitle1">2 Due This Week</MudText>
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" sm="6" md="3">
-                <MudPaper Class="pa-4" Elevation="3">
-                    <MudText Typo="Typo.h6">Grades</MudText>
-                    <MudText Typo="Typo.subtitle1">Avg: 4.33</MudText>
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" sm="6" md="3">
-                <MudPaper Class="pa-4" Elevation="3">
-                    <MudText Typo="Typo.h6">Messages</MudText>
-                    <MudText Typo="Typo.subtitle1">1 Unread</MudText>
-                </MudPaper>
-            </MudItem>
-        </MudGrid>
+    
+        <!-- Main content -->
+        <MudContainer MaxWidth="MaxWidth.False" Class="p-4">
+            <MudGrid GutterSize="4">
+                <MudItem xs="12" sm="6" md="3">
+                    <MudPaper Class="pa-4" Elevation="3">
+                        <MudText Typo="Typo.h6">Courses</MudText>
+                        <MudText Typo="Typo.subtitle1">5 Enrolled</MudText>
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12" sm="6" md="3">
+                    <MudPaper Class="pa-4" Elevation="3">
+                        <MudText Typo="Typo.h6">Assignments</MudText>
+                        <MudText Typo="Typo.subtitle1">2 Due This Week</MudText>
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12" sm="6" md="3">
+                    <MudPaper Class="pa-4" Elevation="3">
+                        <MudText Typo="Typo.h6">Grades</MudText>
+                        <MudText Typo="Typo.subtitle1">Avg: 4.33</MudText>
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12" sm="6" md="3">
+                    <MudPaper Class="pa-4" Elevation="3">
+                        <MudText Typo="Typo.h6">Messages</MudText>
+                        <MudText Typo="Typo.subtitle1">1 Unread</MudText>
+                    </MudPaper>
+                </MudItem>
+            </MudGrid>
     </MudContainer>
-
+    <ExtendedAuthorizeView Roles="@([RoleType.Student])">
+    </ExtendedAuthorizeView>
 </MudLayout>
-<ExtendedAuthorizeView Roles="@([RoleType.Admin, RoleType.Headmaster])">
-    Welcome to your new app.
-</ExtendedAuthorizeView>
+
 <style>
     .greeting-banner {
         margin: 1.5rem;
