--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageHeadmasters/Form.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageHeadmasters/Form.razor
@@ -1,27 +1,112 @@
-﻿@inherits ExtendedComponentBase
+﻿@inherits CreateUserRoleBaseComponent<HeadmasterViewModel>
 
 <PageTitle>@PageTitle</PageTitle>
 
-@* <MudPaper Class="pa-4">
+<MudPaper Class="pa-4">
     <MudText Typo="Typo.h5" Class="mb-4">@PageTitle</MudText>
 
-    <EditForm Model="ViewModel" OnValidSubmit="HandleValidSubmit">
-        <MudTextField @bind-Value="ViewModel.FullName" Label="Full Name" Required="true" />
-        <MudTextField @bind-Value="ViewModel.Email" Label="Email" Required="true" />
-        <MudTextField @bind-Value="ViewModel.BusinessEmail" Label="Business Email" Required="true" />
-        <MudTextField @bind-Value="ViewModel.BusinessPhoneNumber" Label="Phone" Required="true" />
+    <MudForm @ref="FormRef">
 
-        <MudSelect T="Guid" @bind-Value="ViewModel.SchoolId" Label="School" Required="true" MultiSelection=false Placeholder="Nothing selected">
-            @foreach (var school in _schools)
+        @if (IsCreate)
+        {
+            <MudToggleGroup Value="SelectedCreationType"
+                            ValueChanged="@SelectedCreationTypeChanged"
+                            T="string"
+                            CheckMark="false"
+                            Size="Size.Medium">
+                @foreach (string creationType in CreationTypes)
+                {
+                    <MudToggleItem Value="@creationType" />
+                }
+            </MudToggleGroup>
+        }
+
+        @if (SelectedCreationType == CreationTypes[0])
+        {
+            @if (IsCreate)
             {
-                <MudSelectItem T="Guid" Value="@(school.Id)">
-                    @school.Name
-                </MudSelectItem>
+                <MudAutocomplete T="UserViewModel"
+                             Value="ViewModel.User"
+                             ValueChanged="@UserChanged"
+                             Label="User"
+                             SearchFunc="SearchUsers"
+                             ToStringFunc="@(args => (args is null) ? "" : args.ToString())"
+                             CoerceText="true"
+                             Variant="Variant.Text"
+                             Clearable="false"
+                             ShowProgressIndicator="true"
+                             Validation="@(new Func<UserViewModel, IEnumerable<string>>(UserValidity))">
+                <ProgressIndicatorTemplate>
+                    <MudProgressLinear Size="Size.Small" Indeterminate="true" Color="@Color.Info" />
+                </ProgressIndicatorTemplate>
+
+                <NoItemsTemplate>
+                    <p class="no-content">No data to display</p>
+                </NoItemsTemplate>
+
+                <ItemTemplate Context="user">
+                    <div class="dropdown-item-container">
+                        <p class="dropdown-item-title">@user.ToString()</p>
+                        <p class="dropdown-item-subtitle">@user.PhoneNumber</p>
+                        <p class="dropdown-item-subtitle">
+                            @{
+                                string isActive = "Is Active: ";
+                                string isActiveEmoji = user.IsActive ? "✅" : "❌";
+                            }
+                            <span>@($"{isActive}{isActiveEmoji}")</span> 
+                        </p>
+                    </div>
+                </ItemTemplate>
+                </MudAutocomplete>
             }
-        </MudSelect>
+            else
+            {
+                <UserForm @bind-ViewModel="ViewModel.User" />
+            }
+        }
+        else
+        {
+            <UserForm @bind-ViewModel="ViewModel.User" />
+        }
 
-        <MudCheckBox T="bool" @bind-Checked="ViewModel.IsActive" Label="Active" />
+        <MudTextField @bind-Value="ViewModel.Role.BusinessEmail" For="@(() => ViewModel.Role.BusinessEmail)" Label="Business Email" />
+        <MudTextField @bind-Value="ViewModel.Role.BusinessPhoneNumber" For="@(() => ViewModel.Role.BusinessPhoneNumber)" Label="Business Phone Number" />
 
-        <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">Create</MudButton>
-    </EditForm>
-</MudPaper> *@
+        <MudAutocomplete T="SchoolViewModel"
+                         @bind-Value="ViewModel.Role.School"
+                         Label="School"
+                         SearchFunc="SearchSchools"
+                         ToStringFunc="@(args => (args is null) ? "" : args.Name)"
+                         CoerceText="true"
+                         Variant="Variant.Text"
+                         Clearable="false"
+                         ShowProgressIndicator="true"
+                         Validation="@(new Func<SchoolViewModel, IEnumerable<string>>(SchoolValidity))"
+                         Disabled="@(!IsCreate)">
+            <ProgressIndicatorTemplate>
+                <MudProgressLinear Size="Size.Small" Indeterminate="true" Color="@Color.Info" />
+            </ProgressIndicatorTemplate>
+
+            <NoItemsTemplate>
+                <p class="no-content">No data to display</p>
+            </NoItemsTemplate>
+
+            <ItemTemplate Context="school">
+                <div class="dropdown-item-container">
+                    <p class="dropdown-item-title">@school.Name</p>
+                </div>
+            </ItemTemplate>
+        </MudAutocomplete>
+        
+        <MudInputLabel>@("Is Active")</MudInputLabel>
+        <MudCheckBox @bind-Value="ViewModel.Role.IsActive" Color="Color.Primary" />
+
+        <MudButton OnClick="@SubmitHandler" ButtonType="ButtonType.Button" Variant="Variant.Filled" Color="Color.Primary" Class="mt-4">
+            @("Submit")
+        </MudButton>
+        <MudButton OnClick="CancelHandler" Variant="Variant.Text" Class="mt-4 ml-2">
+            @("Cancel")
+        </MudButton>
+    </MudForm>
+
+</MudPaper>
